Change layout again and add more documentation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="nav">
             <div class="links">
-                <a href="/instrumental/index.html">Project 1</a>
+                <a href="./instrumental">Project 1</a>
                 <a>Project 2</a>
                 <a>Project 3</a>
                 <a>Project 4</a>
