--- a/instrumental/index.html
+++ b/instrumental/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>InstruMental Documentation</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="styles.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
     <body>
         <div class="nav">
             <div class="links">
-                <a href="../instrumental">Project 1</a>
+                <a href="/">Project 1</a>
                 <a>Project 2</a>
                 <a>Project 3</a>
                 <a>Project 4</a>
@@ -19,7 +19,7 @@
         <div class="documentation">
             <div class="title">
                 <h1>InstruMental</h1>
-                <p><a href="https://github.com/ethanchaplin/ui-project-1">source</a> | <a href="./implementation/">live demo</a></p>
+                <p><a href="https://github.com/ethanchaplin/ui-project-1">source</a> | <a href="/implementation/">live demo</a></p>
             </div>
             <h2>Description</h2>
             <p>InstruMental was the first project of my User Interfaces course. We were tasked with creating
