fix url to live demo

--- a/instrumental/index.html
+++ b/instrumental/index.html
@@ -19,7 +19,7 @@
         <div class="documentation">
             <div class="title">
                 <h1>InstruMental</h1>
-                <p><a href="https://github.com/ethanchaplin/ui-project-1">source</a> | <a href="/implementation/">live demo</a></p>
+                <p><a href="https://github.com/ethanchaplin/ui-project-1">source</a> | <a href="implementation/">live demo</a></p>
             </div>
             <h2>Description</h2>
             <p>InstruMental was the first project of my User Interfaces course. We were tasked with creating
