--- a/instrumental/index.html
+++ b/instrumental/index.html
@@ -203,8 +203,12 @@
                     Flesh out the audio experience, and implement a way to compare the same song over time, to track your sonic progress. I would also like users to be able to record
                     in-app, without needing to externally record, store, and then upload their audio.
                 </li>
+                <li>
+                    Finish the graphs, as seen in the bottom right corner section of the sidebar.
+                </li>
             </ul>
             <h2>Demo</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wbQtER-Vaqk?si=f2spdF2d8dKRteRX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </body>
 </html>
