--- a/instrumental/index.html
+++ b/instrumental/index.html
@@ -80,6 +80,14 @@
                 <li>Creating an infinite calendar scroller</li>
             </ul>
             <h3>Sketches</h3>
+            <div class="sketches">
+                <img src="assets/sketch_1.jpg">
+                <img src="assets/sketch_2.jpg">
+            </div>
+            <div class="sketches">
+                <img src="assets/sketch_audio.jpg">
+                <img src="assets/sketch_calendar.jpg">
+            </div>
             <h3>Final Prototype</h3>
             <img src="assets/demo_sketch.png">
             <h3>Feedback</h3>
