--- a/instrumental/index.html
+++ b/instrumental/index.html
@@ -12,7 +12,7 @@
             <div class="links">
                 <a href="/">Home</a>
                 <a href="/instrumental/">Project 1</a>
-                <a>Project 2</a>
+                <a href="/smartchair/">Project 2</a>
                 <a>Project 3</a>
                 <a>Project 4</a>
             </div>
