--- a/smartchair/index.html
+++ b/smartchair/index.html
@@ -65,8 +65,10 @@
                 <img src="./assets/sketch3.png" alt="Sketch 3">
                 <img src="./assets/sketch4.png" alt="Sketch 4">
             </div>
-            <ul>
-            </ul>
+            <div>
+                <img src="./assets/sketch5.png" alt="Sketch 5">
+                <img src="./assets/sketch6.png" alt="Sketch 6">
+            </div>
             <h2>Element Descriptions</h2>
             <h3>Chair Visual</h3>
             <p>
