add another sketch

--- a/smartchair/index.html
+++ b/smartchair/index.html
@@ -65,9 +65,12 @@
                 <img src="./assets/sketch3.png" alt="Sketch 3">
                 <img src="./assets/sketch4.png" alt="Sketch 4">
             </div>
-            <div>
+            <div class="sketches">
                 <img src="./assets/sketch5.png" alt="Sketch 5">
                 <img src="./assets/sketch6.png" alt="Sketch 6">
+            </div>
+            <div class="sketches">
+                <img src="./assets/sketch7.png" alt="Sketch 7">
             </div>
             <h2>Element Descriptions</h2>
             <h3>Chair Visual</h3>
