make links relative

--- a/youschedule/index.html
+++ b/youschedule/index.html
@@ -7,15 +7,15 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CP2YxGlP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DNHQ2edl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/VjCNVJpb.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/gt70LXMx.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DzLOCkL4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/rgQEc1Ks.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CwHLHbtU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DSNOYk_x.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CKtf1hCL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CP2YxGlP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DNHQ2edl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/VjCNVJpb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/gt70LXMx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DzLOCkL4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/rgQEc1Ks.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CwHLHbtU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DSNOYk_x.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CKtf1hCL.js">
 		<style>
 			body {
 				margin: 0;
@@ -38,8 +38,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CP2YxGlP.js"),
-						import("/_app/immutable/entry/app.DzLOCkL4.js")
+						import("./_app/immutable/entry/start.CP2YxGlP.js"),
+						import("./_app/immutable/entry/app.DzLOCkL4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
