--- a/smartchair/index.html
+++ b/smartchair/index.html
@@ -13,7 +13,7 @@
                 <a href="/">Home</a>
                 <a href="/instrumental/">Project 1</a>
                 <a href="/smartchair/">Project 2</a>
-                <a>Project 3</a>
+                <a href="/youschedule">Project 3</a>
                 <a>Project 4</a>
             </div>
         </div>
