make links relative

--- a/youschedule/implementation/index.html
+++ b/youschedule/implementation/index.html
@@ -7,15 +7,15 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.1CzQHMB-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/SOCWDmR6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Da5ulnKZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BNS7LE9R.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.LNYQHt_O.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CxFi6g2Z.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DS7JpHRJ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/qvQQYRCv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B4_oXTMx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1CzQHMB-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/SOCWDmR6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Da5ulnKZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BNS7LE9R.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.LNYQHt_O.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CxFi6g2Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DS7JpHRJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/qvQQYRCv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B4_oXTMx.js">
 		<style>
 			body {
 				margin: 0;
@@ -38,8 +38,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.1CzQHMB-.js"),
-						import("/_app/immutable/entry/app.LNYQHt_O.js")
+						import("./_app/immutable/entry/start.1CzQHMB-.js"),
+						import("./_app/immutable/entry/app.LNYQHt_O.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
