--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="nav">
             <div class="links">
-                <a href="/">Home</a>
+                <a href="/youfood/">Home</a>
                 <a href="/instrumental">Project 1</a>
                 <a href="/smartchair">Project 2</a>
                 <a href="/youschedule">Project 3</a>
