--- a/youschedule/index.html
+++ b/youschedule/index.html
@@ -13,8 +13,8 @@
                 <a href="/">Home</a>
                 <a href="/instrumental/">Project 1</a>
                 <a href="/smartchair/">Project 2</a>
-                <a href="/youschedule">Project 3</a>
-                <a>Project 4</a>
+                <a href="/youschedule/">Project 3</a>
+                <a href="/youfood/">Project 4</a>
             </div>
         </div>
         <div class="documentation">
