--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <body>
         <div class="nav">
             <div class="links">
-                <a href="/youfood/">Home</a>
+                <a href="/">Home</a>
                 <a href="/instrumental">Project 1</a>
                 <a href="/smartchair">Project 2</a>
                 <a href="/youschedule">Project 3</a>
-                <a>Project 4</a>
+                <a href="/youfood/">Project 4</a>
             </div>
         </div>
         <div class="main-content">
